// Vitest Snapshot v1

exports[`RoutineCard > should render successfully 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="routine-card"
  >
    <div
      class="flex h-7 items-center justify-between space-x-3"
    >
      <div
        class="flex max-w-[440px] items-center space-x-3"
      >
        <h3
          class="text-sm font-semibold uppercase text-red-600 truncate"
        >
          Routine 1
           
        </h3>
        <span
          class="text-sm font-medium text-red-400 ml-2 flex-shrink-0 tabular-nums"
        >
          00:00
        </span>
      </div>
    </div>
    <ol
      class="space-y-1 pt-2 pb-1"
      data-testid="routine-card-items"
    >
      <li
        aria-describedby="DndDescribedBy-0"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="flex h-7 items-center justify-between space-x-2"
        data-testid="routine-card-items-item"
        role="button"
        tabindex="0"
      >
        <div
          class="flex w-full items-center"
        >
          <input
            aria-checked="false"
            class="h-4 w-4 rounded border-red-300 text-red-600 focus:ring-red-500"
            id="routine-1-item-1"
            name="routine-1-item-1"
            type="checkbox"
          />
          <label
            class="ml-3 flex-1 truncate font-medium text-neutral-700"
            for="routine-1-item-1"
          >
            Item 1
          </label>
        </div>
      </li>
    </ol>
    <div
      id="DndDescribedBy-0"
      style="display: none;"
    >
      
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="DndLiveRegion-0"
      role="status"
      style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
    />
  </div>
</div>
`;

exports[`RoutineCard > should show action button 1`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="routine-card"
  >
    <div
      class="flex h-7 items-center justify-between space-x-3"
    >
      <div
        class="flex max-w-[440px] items-center space-x-3"
      >
        <h3
          class="text-sm font-semibold uppercase text-red-600 truncate"
        >
          Routine 1
           
        </h3>
        <span
          class="text-sm font-medium text-red-400 ml-2 flex-shrink-0 tabular-nums"
        >
          00:00
        </span>
      </div>
      <div
        class="flex flex-shrink-0 items-center space-x-1"
      >
        <button
          class="rounded-md px-2 py-1 text-sm hover:bg-red-100 flex-shrink-0"
          data-testid="routine-card-save-items"
        >
          Items
        </button>
        <button
          class="rounded-md p-1 hover:bg-red-100"
          data-testid="routine-card-settings"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 3a1.5 1.5 0 110 3 1.5 1.5 0 010-3zM10 8.5a1.5 1.5 0 110 3 1.5 1.5 0 010-3zM11.5 15.5a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0z"
            />
          </svg>
        </button>
      </div>
    </div>
    <ol
      class="space-y-1 pt-2 pb-1"
      data-testid="routine-card-items"
    >
      <li
        aria-describedby="DndDescribedBy-1"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="flex h-7 items-center justify-between space-x-2"
        data-testid="routine-card-items-item"
        role="button"
        tabindex="0"
      >
        <div
          class="flex w-full items-center"
        >
          <input
            aria-checked="false"
            class="h-4 w-4 rounded border-red-300 text-red-600 focus:ring-red-500"
            id="routine-1-item-1"
            name="routine-1-item-1"
            type="checkbox"
          />
          <label
            class="ml-3 flex-1 truncate font-medium text-neutral-700"
            for="routine-1-item-1"
          >
            Item 1
          </label>
        </div>
      </li>
    </ol>
    <div
      id="DndDescribedBy-1"
      style="display: none;"
    >
      
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="DndLiveRegion-1"
      role="status"
      style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
    />
  </div>
</div>
`;

exports[`RoutineCard > should show action button 2`] = `
<div>
  <div
    class="px-4 py-3 bg-red-50"
    data-testid="routine-card"
  >
    <div
      class="flex h-7 items-center justify-between space-x-3"
    >
      <div
        class="flex max-w-[440px] items-center space-x-3"
      >
        <h3
          class="text-sm font-semibold uppercase text-red-600 truncate"
        >
          Routine 1
           
        </h3>
        <span
          class="text-sm font-medium text-red-400 ml-2 flex-shrink-0 tabular-nums"
        >
          00:00
        </span>
      </div>
    </div>
    <ol
      class="space-y-1 pt-2 pb-1"
      data-testid="routine-card-items"
    >
      <li
        aria-describedby="DndDescribedBy-2"
        aria-disabled="false"
        aria-roledescription="sortable"
        class="flex h-7 items-center justify-between space-x-2"
        data-testid="routine-card-items-item"
        role="button"
        tabindex="0"
      >
        <button
          class="-ml-1.5 p-1.5"
          data-testid="routine-card-items-item-handle"
        >
          <svg
            class="h-4 w-4 text-neutral-500"
            fill="currentColor"
            viewBox="0 0 20 20"
            width="12"
          >
            <path
              d="M7 2a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 2zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 8zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 7 14zm6-8a2 2 0 1 0-.001-4.001A2 2 0 0 0 13 6zm0 2a2 2 0 1 0 .001 4.001A2 2 0 0 0 13 8zm0 6a2 2 0 1 0 .001 4.001A2 2 0 0 0 13 14z"
            />
          </svg>
        </button>
        <div
          class="flex w-full items-center"
        >
          <input
            aria-checked="false"
            class="h-4 w-4 rounded border-red-300 text-red-600 focus:ring-red-500"
            id="routine-1-item-1"
            name="routine-1-item-1"
            type="checkbox"
          />
          <label
            class="ml-3 flex-1 truncate font-medium text-neutral-700"
            for="routine-1-item-1"
          >
            Item 1
          </label>
        </div>
      </li>
    </ol>
    <div
      id="DndDescribedBy-2"
      style="display: none;"
    >
      
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
    </div>
    <div
      aria-atomic="true"
      aria-live="assertive"
      id="DndLiveRegion-2"
      role="status"
      style="position: fixed; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
    />
  </div>
</div>
`;
